--- a/client/style.scss
+++ b/client/style.scss
@@ -386,7 +386,7 @@ body {
         border-color: $base-color;
         border-radius: $font-size / 4 $font-size / 4 0 0;
         color: white;
-        padding: $font-size / 6 $font-size / 2 $font-size / 4;
+        padding: $font-size / 4 $font-size / 2;
       }
 
       > .panel-body {
